# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  makefile
docs/: access.md  add_history.md  chdir.md  dup.md  dup2.md  exit.md  fork.md  fstat.md  getcwd.md  malloc.md  open.md  opendir.md  read.md  readdir.md  readline.md  signal.md  stat.md  tcgetattr.md  tcsetattr.md  tgetflag.md  tgetstr.md  tgoto.md  ttyname.md  unlink.md  wait3.md  wait4.md  waitpid.md
docs/allow_ft/: access.md  add_history.md  chdir.md  close.md  closedir.md  dup.md  dup2.md  errno.md  execve.md  exit.md  fork.md  free.md  fstat.md  getcwd.md  getenv.md  ioctl.md  isatty.md  kill.md  lstat.md  malloc.md  open.md  opendir.md  perror.md  pipe.md  printf.md  read.md  readdir.md  readline.md  sigaction.md  sigaddset.md  sigemptyset.md  signal.md  stat.md  strerror.md  tcgetattr.md  tcsetattr.md  tgetent.md  tgetflag.md  tgetnum.md  tgetstr.md  (+10 more)
docs/script/: allow_ft.txt  find_info.py  site.md  text_md.py
includes/: builtin.h  input.h  message.h  minishell.h  parser.h  tokenizer.h
libft/: Makefile  ft_atoi.c  ft_calloc.c  ft_free_and_null.c  ft_isblank.c  ft_isdigit.c  ft_itoa.c  ft_memset.c  ft_putendl_fd.c  ft_putstr.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_strtrim.c  ft_substr.c  libft.h  variadic_strjoin.c
source/: main.c
source/core/: debug.c  env_lst.c  free.c  init.c  main.c  minishell.c  parser.c  signal.c  utils.c  utils_lst.c
sources/builtins/: 2d_array_utils.c  cd.c  echo.c  env_to_hashmap.c  exit.c  exit_minishell.c  export.c  hashmap_to_env.c  hashmap_to_env_with_quotes.c  print_environment.c  pwd.c  quick_sort_2d_array.c  set_local_variable.c  unset.c
sources/core/: env_dup.c  here_doc_signal.c  message.c  minishell.c  prompt.c  signals.c
sources/exec/: execute_command.c  path.c
sources/hashmap/: hash.c  hashmap_create_pair.c  hashmap_create_table.c  hashmap_delete.c  hashmap_free_pair.c  hashmap_free_table.c  hashmap_handle_collision.c  hashmap_insert.c  hashmap_print_table.c  hashmap_search.c
sources/lexer/: add_token.c  check_and_insert_spaces.c  check_blanks_around.c  define_end_quote.c  define_type.c  handle_quotes.c  insert_spaces.c  quotes.c  special_case.c  split_token.c  token_lst.c  tokenizer.c
sources/parser/: command_parser.c  create_command.c  here_document.c  process_parser.c  redirect_parser.c
sources/variable_expansion/: expand.c  handle_var_single_quote.c  variables_expansion.c  variables_utils.c
